--- a/index.html
+++ b/index.html
@@ -9,52 +9,41 @@
 </head>
 <body>
     <nav>
-    <div class="logo">
-      <img src="logo.png" alt="calvos-Wiki">
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Artículos</a></li>
-      <li><a href="Games.html">Games</a></li>
-      <li><a href="#">Discord</a></li>
-      <li><a href="#">wshap</a></li>
-    </ul>
-  </nav>
+        <div class="logo">
+            <img src="logo.png" alt="calvos-Wiki">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Artículos</a></li>
+            <li><a href="Games.html">Games</a></li>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">wshap</a></li>
+        </ul>
+    </nav>
 
-    <center>
-        <article>
-            <h1>calvos-wiki</h1>
-  <h3>integrantes</h3><br>
-  <h3></h3>
-</center>
-</article>
-
-
-
+    <article>
+        <h1>calvos-wiki</h1>
+        <h3>Integrantes</h3>
+        <br>
+    </article>
 
     <div class="gallery">
         <div class="photo">
-        <a href="poli.html"><img src="poli.png"></a>
+            <a href="poli.html"><img src="poli.png" alt="Poli"></a>
         </div>
-         <div class="photo">
-        <img src="miguel.png">
+        <div class="photo">
+            <img src="miguel.png" alt="Miguel">
         </div>
-         <div class="photo">
-        <a href="e"><img src="emil.png"></a>
+        <div class="photo">
+            <a href="e"><img src="emil.png" alt="Emil"></a>
         </div>
-         <div class="photo">
-        <a href="e"><img src="edgar.png"></a>
+        <div class="photo">
+            <a href="e"><img src="edgar.png" alt="Edgar"></a>
         </div>
-         <div class="photo">
-        <a href="e"><img src="cristofer.png"></a>
+        <div class="photo">
+            <a href="e"><img src="cristofer.png" alt="Cristofer"></a>
         </div>
-         
-</div>
+    </div>
 
-<center>
-
-
-
-      
 </body>
 </html>
